fix card spacing

--- a/front/src/styles/_publicCard.scss
+++ b/front/src/styles/_publicCard.scss
@@ -4,7 +4,8 @@
   align-items: center;
   align-content: center;
   height: 100%;
-  padding: 15px 0;
+  width: 100%;
+
   /* Lazy Load Styles */
   .card-image {
     display: block;
@@ -31,6 +32,7 @@
   .card {
     display: inline-block;
     height: 100%;
+    width: 100%;
     max-width: 20rem;
     font-size: 1rem;
     text-decoration: none;
